--- a/src/project-data.json
+++ b/src/project-data.json
@@ -1,1 +1,9 @@
-{}
+{
+    "details": {
+        "id": "EMPTY.PROJECT",
+        "name": "project",
+        "title": "empty project"
+    },
+    "cards": [],
+    "links": []
+}
